2011-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnregistry.el: Remove unnecessary `gnus-registry-enabled' defvar.
	* nnir.el: Ditto.
	* nnmairix.el: Ditto.

	* gnus-registry.el (gnus-registry-enabled): Default to nil.

2011-10-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-lesync-setup): Fix salt when user setup is
	not needed.  Provide xmlplistread list function to produce XML plist
	output for non-Gnus LeSync clients.

2011-10-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-fallback-lib/json.el: Add for XEmacs and Emacs 22 support.

	* gnus-sync.el: Add LeSync synchronization backend and logic to read
	and save against it.  Group subscriptions, read marks, other marks,
	subscription levels, topic names, and topic offsets (the group's
	position within the topic) are saved.  This is an experimental backend
	and may change significantly.  Load json.el from the gnus-fallback-lib
	if it's not available otherwise.
	(gnus-sync-save): Don't use `apply-partially' because of XEmacs.

2011-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-completion-function): Make sure
	message-tab-body-function is not attempted if one of
	message-completion-alist fails to find a completion (bug#9158).

2011-10-26  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-quote-region): Quote <#secure> tag.
	(mml-generate-mime-1): Unquote <#secure> tag.

2011-10-20  Chong Yidong  <cyd@gnu.org>

	* gnus-cite.el (gnus-message-citation-mode): Doc fix (in Emacs 24,
	calling a minor mode from Lisp with nil arg enables it, so we have to
	make the wording a bit ambiguous here).

2011-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Macro for XEmacs compatibility.
	* nnir.el (nnir-mode): Use it.
	* nnmairix.el (nnmairix-determine-original-group-from-registry):
	Use it.

	* nnir.el (gnus-registry-enabled): Defvar to keep the compiler happy.
	* nnmairix.el (gnus-registry-enabled): Ditto.
